kitsune/sumo/static/sumo/less/mobile/products.less
@import '../variables.less';
@import 'mixins.less';

.documents {
  h2 {
    background: @borderLightGrey;
    font-size: 20px;
    margin: 0;
    padding: 10px 16px;
  }

  .document-list {
    list-style: none;
    margin: 0;
    padding: 0;

    > li {
      > a,
      > a:visited,
      > a:hover {
        border-bottom: 1px solid @borderLightGrey;
        color: #000;
        display: block;
        font-size: 20px;
        padding: 10px 16px;
        text-decoration: none;
      }
    }
  }

  > header {
    h1 {
      font-weight: bold;
      font-size: 15px;
      line-height: normal;
      margin-top: 5px;
      white-space: normal;
    }
  }

  .filter-bar {
    background: @mobileSubheaderBackground;
    color: #fff;
    font-size: 15px;
    height: 40px;
    line-height: 40px;
    padding: 10px 16px;

    .return-link {
      color: #fff;
      display: block;
      padding-left: 30px;
      position: relative;

      &:before {
        background-position: -52px -1664px;
        .icons-sprite();
        content: '';
        height: 20px;
        left: 0;
        margin-top: -10px;
        position: absolute;
        top: 50%;
        width: 20px;
      }
    }
  }
}

#products,
#topics {
  font-size: 14px;
  list-style: none;
  margin: 0;
  padding: 0;

  > li {
    > a,
    > a:visited,
    > a:hover {
      border-bottom: 1px solid @borderLightGrey;
      color: #000;
      display: block;
      padding: 10px 12px 10px 16px;
      text-decoration: none;

      img {
        float: right;
        margin-left: 40px;
      }

      .title {
        display: block;
        font-size: 18px;
      }
    }
  }
}

#topics {
  font-size: 18px;
}

@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
  .documents {
    .filter-bar {
      .return-link {
        &:after {
          .icons-sprite-2x;
        }
      }
    }
  }
}

